// Compile: protoc --go_out=plugins=grpc:./pkg/pb pkg/pb/raft.proto
syntax = "proto3";
option go_package = "github.com/chuyangliu/rawkv/pkg/pb";

service Raft {
    // RequestVote invoked by candidates to gather votes.
    rpc RequestVote(RequestVoteReq) returns (RequestVoteResp) {}
    // AppendEntries invoked by leader to replicate log entries, also used as heartbeat.
    rpc AppendEntries(AppendEntriesReq) returns (AppendEntriesResp) {}
}

message RequestVoteReq {
    uint64 term = 1;
    int32 candidateID = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResp {
    uint64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesReq {
}

message AppendEntriesResp {
}
